RESOLVED FIXED81197
[BlackBerry] Can not open certain links from bridge applications
https://bugs.webkit.org/show_bug.cgi?id=81197
Summary [BlackBerry] Can not open certain links from bridge applications
Robin Cao
Reported 2012-03-15 00:47:25 PDT
Can not open certain links (e.g., target="_blank") from bridge applications. Patch coming up to fix this problem.
Attachments
patch (5.12 KB, patch)
2012-03-15 03:34 PDT, Robin Cao
no flags
updated patch (4.96 KB, patch)
2012-03-16 00:19 PDT, Robin Cao
no flags
Robin Cao
Comment 1 2012-03-15 03:34:33 PDT
Rob Buis
Comment 2 2012-03-15 04:38:11 PDT
Comment on attachment 132009 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=132009&action=review > Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:1068 > + // how to handle patterns such as 'mailto:'. Where are we giving that chance iafter this patch? I thought the disabled block did that. > Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:1075 > + // } I think putting this in a #if 0 block would make this look less messy.
Robin Cao
Comment 3 2012-03-16 00:11:02 PDT
(In reply to comment #2) > (From update of attachment 132009 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=132009&action=review > > > Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:1068 > > + // how to handle patterns such as 'mailto:'. > > Where are we giving that chance iafter this patch? I thought the disabled block did that. > The following is the updated comments, hope this explains things better. // FIXME: Enable these commented out when WebPageClient::handleStringPattern is implemented // and exposed to client. Before that, don't return PolicyIgnore so we can continue to // create new window and get to dispatchDecidePolicyForNavigationAction() where the client // is given a chance to decide how to handle patterns such as 'mailto:'. > > Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:1075 > > + // } > > I think putting this in a #if 0 block would make this look less messy. Will use "#if 0" in the updated patch.
Robin Cao
Comment 4 2012-03-16 00:19:35 PDT
Created attachment 132216 [details] updated patch
Build Bot
Comment 5 2012-03-16 00:44:11 PDT
Comment on attachment 132216 [details] updated patch Attachment 132216 [details] did not pass mac-ews (mac): Output: http://queues.webkit.org/results/11966017
Charles Wei
Comment 6 2012-03-16 01:07:55 PDT
Comment on attachment 132216 [details] updated patch LGTM. We need to implement "handleExternalLoad" and "handleStringPattern" sometime.
WebKit Review Bot
Comment 7 2012-03-16 01:08:59 PDT
Comment on attachment 132216 [details] updated patch Rejecting attachment 132216 [details] from review queue. charles.wei@torchmobile.com.cn does not have reviewer permissions according to http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py. - If you do not have reviewer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have reviewer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your reviewer rights.
Charles Wei
Comment 8 2012-03-16 01:13:14 PDT
Comment on attachment 132216 [details] updated patch View in context: https://bugs.webkit.org/attachment.cgi?id=132216&action=review > Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:1077 > +#endif Yes, we didn't implement handleStringPattern yet, so we should never reach here until that's been implemented.
Rob Buis
Comment 9 2012-03-16 04:16:28 PDT
Comment on attachment 132216 [details] updated patch LGTM.
WebKit Review Bot
Comment 10 2012-03-16 06:35:56 PDT
Comment on attachment 132216 [details] updated patch Clearing flags on attachment: 132216 Committed r111000: <http://trac.webkit.org/changeset/111000>
WebKit Review Bot
Comment 11 2012-03-16 06:36:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.